<resources>
    <!-- presets -->
    <string name="app_name">BoxBase</string>
    <string name="button_next">next</string>
    <string name="button_cancel">cancel</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_sign_in">sign in or register</string>
    <string name="action_sign_in_short">sign in</string>
    <string name="welcome">"Welcome! "</string>
    <string name="invalid_username">not a valid email address</string>
    <string name="empty_username">this field is mandatory</string>
    <string name="invalid_password">password must contain at least 6 characters</string>
    <string name="login_failed">login failed</string>

    <!-- input box hints -->
    <string name="hint_receiver">receiver</string>
    <string name="hint_first_name">first name</string>
    <string name="hint_last_name">last name</string>
    <string name="hint_street">street</string>
    <string name="hint_house_number">no.</string>
    <string name="hint_postcode">postcode</string>
    <string name="hint_city">city</string>
    <string name="hint_country">country</string>
    <string name="hint_email">email</string>
    <string name="hint_password">password</string>
    <string name="hint_set_password">set password</string>
    <string name="hint_repeat_password">repeat password</string>

    <!-- titles -->
    <string name="title_registration">Registration</string>
    <string name="title_main_menu_incoming">Incoming</string>
    <string name="title_main_menu_outgoing">Outgoing</string>
    <string name="title_send_package_delivery_address">Delivery address</string>
    <string name="title_send_package_drop_location">Drop location</string>
    <string name="title_package_size">Package size</string>
    <string name="title_redirect_package_options">Redirection options</string>

    <string name="title_mdb_desired_location">Desired location</string>
    <string name="title_mdb_location">Location of mobile delivery base</string>

    <string name="title_key_compartment">Key to open compartment</string>


    <!-- buttons -->
    <string name="button_registration_create_account">create account</string>
    <string name="button_send_package">send package</string>
    <string name="button_send_package_confirm">go to payment</string>
    <string name="button_redirection_confirm">confirm redirection</string>
    <string name="button_discard">discard</string>
    <string name="button_main_menu_delivery_details">details</string>
    <string name="button_main_menu_delivery_outgoing_action">drop off</string>
    <string name="button_main_menu_delivery_incoming_action">redirect</string>
    <string name="button_create_account">create account</string>
    <string name="button_reset_password">reset password</string>
    <string name="button_confirm_location">confirm location</string>
    <string name="button_open_compartment">open compartment</string>
    <string name="button_close">go back</string>
    <string name="button_finish">finish</string>


    <!-- Package sizes -->
    <string name="package_size_s">S</string>
    <string name="package_size_m">M</string>
    <string name="package_size_l">L</string>


    <!-- pick up / drop off location -->
    <string name="location_selection_shop_title">package shop</string>
    <string name="location_selection_others_title">other address</string>

    <string name="location_selection_mdb_title">mobile delivery base</string>
    <string name="location_selection_mdb_hint">close to …</string>
    <string name="button_home_address">home address</string>
    <string name="button_point_on_map">point on map</string>
    <string name="dropdown_hint_time_slot">set time slot for …</string>
    <string name="dropdown_hint_from">from</string>
    <string name="dropdown_hint_to">to</string>
    <string name="dropdown_hint_day">day</string>
    <string name="dropdown_hint_time">time</string>


</resources>
